--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "RBStar: Rank-biased effectiveness metrics for IR evaluation"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = ["information retrieval", "evaluation metrics", "rank-biased", "IR", "RBP", "RBR", "RBO", "RBA"]
 classifiers = [
@@ -25,10 +25,13 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 dependencies = [
-    "numpy>=1.20.0",
-    "pandas>=1.3.0",
-    "scipy>=1.7.0",
-    "tqdm>=4.65.0",
+    "typing-extensions>=4.0.0",  # For advanced typing features
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "hypothesis>=6.0.0",  # For property-based testing
 ]
 
 [project.scripts]
@@ -42,8 +45,8 @@ rbstar = "rbstar.__main__:rbstar_main"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "black>=22.0.0",
-    "isort>=5.0.0",
-    "flake8>=4.0.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["rbstar/tests"]
+python_files = ["test_*.py"]
